FCU's files moved to separate dir

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,9 +22,11 @@ file(GLOB VASFMC_SOURCES fmc_data.cpp fmc_control.cpp fmc_autopilot.cpp fmc_auto
         fmc_cdu_page_atc.cpp fmc_console.cpp fmc_pfd.cpp fmc_pfd_glwidget_base.cpp fmc_pfd_glwidget_style_a.cpp
         fmc_pfd_glwidget_style_b.cpp fmc_ecam.cpp fmc_ecam_glwidget_base.cpp fmc_ecam_glwidget_style_a.cpp
         fmc_ecam_glwidget_style_b.cpp fmc_sounds.cpp fmc_sounds_style_a.cpp fmc_sounds_style_b.cpp fmc_sounds_handler.cpp
-        vas_widget.cpp vas_gl_widget.cpp fmc_fcu.cpp fmc_fcu_style_a.cpp mmx.cpp fmc_flightstatus_checker_base.cpp
+        vas_widget.cpp vas_gl_widget.cpp mmx.cpp fmc_flightstatus_checker_base.cpp
         fmc_flightstatus_checker_style_a.cpp cpflight_serial.cpp iocp.cpp fmc_gps.cpp fmc_gps_style_g.cpp
-        checklist.cpp main.cpp)
+        checklist.cpp main.cpp
+        fcu/fmc_fcu.cpp fcu/fmc_fcu_style_a.cpp fcu/fmc_fcu_style_a_m.cpp
+        )
 
 file(GLOB VASFMC_HEADERS defines.h fmc_data.h fmc_control_defines.h fmc_control.h fmc_autopilot.h fmc_autopilot_defines.h
         fmc_autothrottle.h fmc_autothrottle_defines.h fmc_processor.h fmc_navdisplay_defines.h fmc_navdisplay.h
@@ -33,9 +35,11 @@ file(GLOB VASFMC_HEADERS defines.h fmc_data.h fmc_control_defines.h fmc_control.
         fmc_cdu_page_base.h fmc_cdu_page.h fmc_cdu_page_menu.h fmc_cdu_page_perf.h fmc_cdu_page_atc.h fmc_console_defines.h
         fmc_console.h fmc_pfd_defines.h fmc_pfd.h fmc_pfd_glwidget_base.h fmc_pfd_glwidget_style_a.h fmc_pfd_glwidget_style_b.h
         fmc_ecam_defines.h fmc_ecam.h fmc_ecam_glwidget_base.h fmc_ecam_glwidget_style_a.h fmc_ecam_glwidget_style_b.h fmc_sounds_defines.h
-        fmc_sounds.h fmc_sounds_style_a.h fmc_sounds_style_b.h fmc_sounds_handler.h vas_widget.h vas_gl_widget.h fmc_fcu.h fmc_fcu_defines.h
-        fmc_fcu_style_a.h mmx.h fmc_flightstatus_checker_base.h fmc_flightstatus_checker_style_a.h cpflight_serial.h iocp.h fmc_gps.h fmc_gps_defines.h
-        fmc_gps_style_g.h checklist.h)
+        fmc_sounds.h fmc_sounds_style_a.h fmc_sounds_style_b.h fmc_sounds_handler.h vas_widget.h vas_gl_widget.h
+        mmx.h fmc_flightstatus_checker_base.h fmc_flightstatus_checker_style_a.h cpflight_serial.h iocp.h fmc_gps.h fmc_gps_defines.h
+        fmc_gps_style_g.h checklist.h
+        fcu/fmc_fcu_defines.h fcu/fmc_fcu.h fcu/fmc_fcu_style_a.h fcu/fmc_fcu_style_a_m.h
+        )
 
 file(GLOB VASFMC_UI ${CMAKE_CURRENT_LIST_DIR}/ui/fmc_navdisplay.ui
                     ${CMAKE_CURRENT_LIST_DIR}/ui/fmc_pfd.ui
@@ -57,6 +61,7 @@ set_source_files_properties(${PROJECT_NAME}.rc PROPERTIES LANGUAGE RC)
 
 add_executable(${PROJECT_NAME} WIN32 ${VASFMC_UI} ${VASFMC_SOURCES} ${VASFMC_HEADER} ${GL_SOURCES} ${GL_HEADERS})
 target_link_libraries(${PROJECT_NAME} ${QT_DEPS_LIBRARIES} vaslib ${OPENGL_LIBRARIES})
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/fcu)
 
 if(WIN32)
     target_link_libraries(${PROJECT_NAME} ws2_32)
