Moving files to separate directories

--- a/vasfmc/src/CMakeLists.txt
+++ b/vasfmc/src/CMakeLists.txt
@@ -16,28 +16,28 @@ find_package(OpenGL)
 #find_package(vaslib REQUIRED)
 
 file(GLOB VASFMC_SOURCES fmc_data.cpp fmc_control.cpp fmc_autopilot.cpp fmc_autothrottle.cpp fmc_processor.cpp
-        fmc_navdisplay.cpp fmc_navdisplay_glwidget.cpp fmc_navdisplay_style.cpp fmc_navdisplay_style_a.cpp
-        fmc_navdisplay_style_b.cpp gldraw.cpp opengltext.cpp lfontrenderer.cpp cdu/fmc_cdu.cpp cdu/fmc_cdu_style_a.cpp
+        navdisplay/fmc_navdisplay.cpp navdisplay/fmc_navdisplay_glwidget.cpp navdisplay/fmc_navdisplay_style.cpp navdisplay/fmc_navdisplay_style_a.cpp
+        navdisplay/fmc_navdisplay_style_b.cpp gldraw.cpp opengltext.cpp lfontrenderer.cpp cdu/fmc_cdu.cpp cdu/fmc_cdu_style_a.cpp
         cdu/fmc_cdu_page_manager.cpp cdu/fmc_cdu_page_base.cpp cdu/fmc_cdu_page.cpp cdu/fmc_cdu_page_menu.cpp cdu/fmc_cdu_page_perf.cpp
-        cdu/fmc_cdu_page_atc.cpp fmc_console.cpp fmc_pfd.cpp fmc_pfd_glwidget_base.cpp fmc_pfd_glwidget_style_a.cpp
-        fmc_pfd_glwidget_style_b.cpp fmc_ecam.cpp fmc_ecam_glwidget_base.cpp fmc_ecam_glwidget_style_a.cpp
-        fmc_ecam_glwidget_style_b.cpp fmc_sounds.cpp fmc_sounds_style_a.cpp fmc_sounds_style_b.cpp fmc_sounds_handler.cpp
+        cdu/fmc_cdu_page_atc.cpp fmc_console.cpp pfd/fmc_pfd.cpp pfd/fmc_pfd_glwidget_base.cpp pfd/fmc_pfd_glwidget_style_a.cpp
+        pfd/fmc_pfd_glwidget_style_b.cpp ecam/fmc_ecam.cpp ecam/fmc_ecam_glwidget_base.cpp ecam/fmc_ecam_glwidget_style_a.cpp
+        ecam/fmc_ecam_glwidget_style_b.cpp sounds/fmc_sounds.cpp sounds/fmc_sounds_style_a.cpp sounds/fmc_sounds_style_b.cpp sounds/fmc_sounds_handler.cpp
         vas_widget.cpp vas_gl_widget.cpp mmx.cpp fmc_flightstatus_checker_base.cpp
-        fmc_flightstatus_checker_style_a.cpp cpflight_serial.cpp iocp.cpp fmc_gps.cpp fmc_gps_style_g.cpp
+        fmc_flightstatus_checker_style_a.cpp cpflight_serial.cpp iocp.cpp gps/fmc_gps.cpp gps/fmc_gps_style_g.cpp
         checklist.cpp main.cpp
         fcu/fmc_fcu.cpp fcu/fmc_fcu_style_a.cpp fcu/fmc_fcu_style_a_m.cpp
         )
 
 file(GLOB VASFMC_HEADERS defines.h fmc_data.h fmc_control_defines.h fmc_control.h fmc_autopilot.h fmc_autopilot_defines.h
-        fmc_autothrottle.h fmc_autothrottle_defines.h fmc_processor.h fmc_navdisplay_defines.h fmc_navdisplay.h
-        fmc_navdisplay_glwidget.h fmc_navdisplay_style.h fmc_navdisplay_style_a.h fmc_navdisplay_style_b.h
+        fmc_autothrottle.h fmc_autothrottle_defines.h fmc_processor.h navdisplay/fmc_navdisplay_defines.h navdisplay/fmc_navdisplay.h
+        navdisplay/fmc_navdisplay_glwidget.h navdisplay/fmc_navdisplay_style.h navdisplay/fmc_navdisplay_style_a.h navdisplay/fmc_navdisplay_style_b.h
         gldraw.h opengltext.h lfontrenderer.h cdu/fmc_cdu.h cdu/fmc_cdu_defines.h cdu/fmc_cdu_style_a.h cdu/fmc_cdu_page_manager.h
         cdu/fmc_cdu_page_base.h cdu/fmc_cdu_page.h cdu/fmc_cdu_page_menu.h cdu/fmc_cdu_page_perf.h cdu/fmc_cdu_page_atc.h fmc_console_defines.h
-        fmc_console.h fmc_pfd_defines.h fmc_pfd.h fmc_pfd_glwidget_base.h fmc_pfd_glwidget_style_a.h fmc_pfd_glwidget_style_b.h
-        fmc_ecam_defines.h fmc_ecam.h fmc_ecam_glwidget_base.h fmc_ecam_glwidget_style_a.h fmc_ecam_glwidget_style_b.h fmc_sounds_defines.h
-        fmc_sounds.h fmc_sounds_style_a.h fmc_sounds_style_b.h fmc_sounds_handler.h vas_widget.h vas_gl_widget.h
-        mmx.h fmc_flightstatus_checker_base.h fmc_flightstatus_checker_style_a.h cpflight_serial.h iocp.h fmc_gps.h fmc_gps_defines.h
-        fmc_gps_style_g.h checklist.h
+        fmc_console.h pfd/fmc_pfd_defines.h pfd/fmc_pfd.h pfd/fmc_pfd_glwidget_base.h pfd/fmc_pfd_glwidget_style_a.h pfd/fmc_pfd_glwidget_style_b.h
+        ecam/fmc_ecam_defines.h ecam/fmc_ecam.h ecam/fmc_ecam_glwidget_base.h ecam/fmc_ecam_glwidget_style_a.h ecam/fmc_ecam_glwidget_style_b.h sounds/fmc_sounds_defines.h
+        sounds/fmc_sounds.h sounds/fmc_sounds_style_a.h sounds/fmc_sounds_style_b.h sounds/fmc_sounds_handler.h vas_widget.h vas_gl_widget.h
+        mmx.h fmc_flightstatus_checker_base.h fmc_flightstatus_checker_style_a.h cpflight_serial.h iocp.h gps/fmc_gps.h gps/fmc_gps_defines.h
+        gps/fmc_gps_style_g.h checklist.h
         fcu/fmc_fcu_defines.h fcu/fmc_fcu.h fcu/fmc_fcu_style_a.h fcu/fmc_fcu_style_a_m.h
         )
 
