--- a/fwlib/src/CMakeLists.txt
+++ b/fwlib/src/CMakeLists.txt
@@ -8,7 +8,7 @@ file(GLOB FWLIB_SOURCES messagebus/fmcmessagebus.cpp *.cpp)
 file(GLOB FWLIB_HEADERS messagebus/fmcmessagebus.h messagebus/eventqueue.h *.h)
 
 add_library(${PROJECT_NAME} STATIC ${FWLIB_SOURCES} ${FWLIB_HEADERS})
-target_link_libraries(${PROJECT_NAME} Userenv)
+target_link_libraries(${PROJECT_NAME} shlwapi.lib)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_CURRENT_LIST_DIR}/messagebus)
 
